Fixing scrollbar display projectGraph + form not center

--- a/workspace/client-public/res/css/desktop.css
+++ b/workspace/client-public/res/css/desktop.css
@@ -1448,5 +1448,5 @@ button.x-btn-search{
 button.x-btn-reset{
 	font-size: 1.2em;
 	font-weight: normal;
-    background-image: url("/sitools/common/res/images/icons/clean.png");
+    background-image: url("/sitools/common/res/images/icons/toolbar_clean.png");
 }
